feat: complete code for refactor ai

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "refactorai"
-version = "0.1.0"
+version = "0.2.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -13,3 +13,7 @@ dependencies = [
     "langgraph>=1.0.1",
     "langgraph-cli[inmem]>=0.4.4",
 ]
+
+
+[project.scripts]
+refactorCli = "refactorCli.cli:main"
