--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "refactorai"
-version = "0.2.0"
+version = "0.3.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -14,6 +14,9 @@ dependencies = [
     "langgraph-cli[inmem]>=0.4.4",
 ]
 
+[build-system]
+requires = ["setuptools>=70.0"]
+build-backend = "setuptools.build_meta"
 
 [project.scripts]
-refactorCli = "refactorCli.cli:main"
+refactor_cli = "refactorCli.__main__:main"
